--- a/themes/minima/languages/en_US.yml
+++ b/themes/minima/languages/en_US.yml
@@ -7,5 +7,5 @@ About: About
 Email: Email
 RecentPosts: Recent Posts
 PostsRelatedTo: Posts related to
-LastUpdatedOn: Last Updated on
+UpdatedOn: Last Updated on
 License: License
